--- a/views/main.ejs
+++ b/views/main.ejs
@@ -36,6 +36,8 @@
         <%- include('../template/board_java') %>
     <% } else if (page_state == 5) { %>
         <%- include('../template/board_python') %>
+    <% } else if (page_state == 6) { %>
+        <%- include('../template/board_userinfo') %>
     <% } %>
 
     
