--- a/template/nav.ejs
+++ b/template/nav.ejs
@@ -30,6 +30,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/board_python">Python</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/board_userinfo">MyPage</a>
+                </li>
             </ul>
         </div>
     </div>
