--- a/css/style.css
+++ b/css/style.css
@@ -148,8 +148,30 @@ a {
   .userinfo_home {
     font-family:"Helvetica";
     padding-bottom: 60px;
-    width: 600px;
-    height: 600px;
+    width: 1000px;
+    height: 85%;
     border: 1px solid red;
     border-radius: 10px;
+    padding-bottom: 60px;
+    position: relative;
   }
+.userinfo_head {
+  width: 600px;
+  height: 100px;
+  border: 1px solid blue;
+}
+.userinfo_item {
+  width: 600px;
+  height: 70px;
+  border: 1px solid blue;
+}
+.userinfo_pw {
+  width: 600px;
+  height: 50px;
+  border: 1px solid blue;
+}
+.userinfo_posts {
+  width: 600px;
+  height: 100px;
+  border: 1px solid blue;
+}
