--- a/css/style.css
+++ b/css/style.css
@@ -148,30 +148,27 @@ a {
   .userinfo_home {
     font-family:"Helvetica";
     padding-bottom: 60px;
-    width: 1000px;
+    width: 900px;
     height: 85%;
-    border: 1px solid red;
     border-radius: 10px;
     padding-bottom: 60px;
     position: relative;
   }
 .userinfo_head {
-  width: 600px;
+  width: 100%;
   height: 100px;
-  border: 1px solid blue;
+  font-size: 60px;
+}
+.userinfo_table {
+  width: 100%;
 }
 .userinfo_item {
-  width: 600px;
+  padding-left: 60px;
+  width: 100%;
   height: 70px;
-  border: 1px solid blue;
-}
-.userinfo_pw {
-  width: 600px;
-  height: 50px;
-  border: 1px solid blue;
 }
 .userinfo_posts {
-  width: 600px;
+  width: 900px;
   height: 100px;
   border: 1px solid blue;
 }
