--- a/template/board_userinfo.ejs
+++ b/template/board_userinfo.ejs
@@ -4,7 +4,7 @@
             <%= user.name %>'s Info
         </div>
         <table>
-            <form action="/edit_password" method="POST"></form>
+            <form action="/edit_password" method="POST">
                 <tr class="userinfo_item">
                     <th style="width: 200px;padding-left: 50px;">ID</th>
                     <td style="width: 700px;"> : <%= user.user_id %></td>
