--- a/template/nav.ejs
+++ b/template/nav.ejs
@@ -36,8 +36,8 @@
             </ul>
         </div>
     </div>
-    <h5 style="margin-right:1%; color: white; text-align:center">Welcome! <%= id %></h5>
+    <h5 style="margin-right:1%; color: white; text-align:center;">Welcome! <%= id %></h5>
     <form class="navbar_user" action="/logout" method="POST">
-        <button class="btn btn-warning" type="submit">Logout</button>
+        <button class="btn btn-warning" type="submit" style="margin-right: 20px;">Logout</button>
     </form>
 </nav>
