--- a/template/board_userinfo.ejs
+++ b/template/board_userinfo.ejs
@@ -1,4 +1,29 @@
 <style>
+    .userinfo_home {
+        font-family:"Helvetica";
+        padding-bottom: 60px;
+        width: 900px;
+        height: 85%;
+        border-radius: 10px;
+        padding-bottom: 60px;
+        position: relative;
+    }
+    .userinfo_head {
+        width: 100%;
+        height: 100px;
+        font-size: 60px;
+    }
+    .userinfo_table {
+        width: 100%;
+    }
+    .userinfo_item {
+        padding-left: 60px;
+        width: 100%;
+        height: 70px;
+    }
+    .userinfo_posts {
+        width: 900px;
+    }
     ul {
         justify-content: center;
     }
@@ -16,7 +41,7 @@
                 </tr>
                 <tr class="userinfo_item">
                     <th style="padding-left: 50px;">비밀번호 변경</th>
-                    <td><input type="password" class="form-control" style="width: 300px;" id="editPW_first" name="editPW_first"></td>
+                    <td><input type="password" class="form-control" placeholder="Password" style="width: 300px;" id="editPW_first" name="editPW_first"></td>
                 </tr>
                 <tr class="userinfo_item">
                     <th style="padding-left: 50px;">비밀번호 확인</th>
