--- a/template/board_python.ejs
+++ b/template/board_python.ejs
@@ -55,19 +55,21 @@
             %>
             <nav aria-label="Page navigation example">
                 <ul class="pagination">
-                  <li class="page-item">
-                    <a class="page-link" href="/page/<%= 1 %>" aria-label="Previous">
-                      <span aria-hidden="true">&laquo;</span>
-                    </a>
-                  </li>
-                  <% for(var j = 0; j < limit_page; j++){ %>
-                  <li class="page-item"><a class="page-link" href="/page/<%= j + 1 %>"><%= j + 1 %></a></li>
-                  <% } %>
-                  <li class="page-item">
-                    <a class="page-link" href="/page/<%= j %>" aria-label="Next">
-                      <span aria-hidden="true">&raquo;</span>
-                    </a>
-                  </li>
+                    <li class="page-item">
+                        <a class="page-link" href="/page/<%= 1 %>" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                    <% for(var j = 0; j < limit_page; j++){ %>
+                    <li class="page-item">
+                        <a class="page-link" href="/page/<%= j + 1 %>"><%= j + 1 %></a>
+                    </li>
+                    <% } %>
+                    <li class="page-item">
+                        <a class="page-link" href="/page/<%= j %>" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
                 </ul>
             </nav>
         </div>
