--- a/template/board_c.ejs
+++ b/template/board_c.ejs
@@ -23,7 +23,7 @@
                         <th scope="col" col width="20%">제목</th>
                         <th scope="col" col width="10%">작성자</th>
                         <th scope="col" col width="20%">게시일</th>
-                        <th scope="col" col width="10%">훈수</th>
+                        <th scope="col" col width="10%">Advice</th>
                     </tr>
                     </colgroup>
                 </thead>
