조회수 기능 추가
- post 컬렉션에 조회수를 저장할 viewcnt 추가
- 게시글 작성 시 viewcnt를 0으로 저장
- 게시글 클릭 시 viewcnt를 updateOne으로 1 증가
- 각 게시판 페이지에 조회수 컬럼 추가

--- a/template/board_list.ejs
+++ b/template/board_list.ejs
@@ -20,9 +20,10 @@
                     <colgroup>
                     <tr class="table-primary">
                         <th scope="col" col width="10%">카테고리</th>
-                        <th scope="col" col width="20%">제목</th>
+                        <th scope="col" col width="15%">제목</th>
                         <th scope="col" col width="10%">작성자</th>
-                        <th scope="col" col width="20%">게시일</th>
+                        <th scope="col" col width="15%">게시일</th>
+                        <th scope="col" col width="10%">조회수</th>
                         <th scope="col" col width="10%">Advice</th>
                     </tr>
                     </colgroup>
@@ -41,6 +42,7 @@
                     <th scope="row"><a href="/read/<%=posts[i].post_no%>"><%= posts[i].post_title %></a></th>
                     <th><%= posts[i].user_id%></th>
                     <th><%= posts[i].date%></th>
+                    <th><%= posts[i].viewcnt%></th>
                     <th><%= posts[i].code_advice.length %></th>
                 </tr>
                 <%}%>
