--- a/template/board_readPost.ejs
+++ b/template/board_readPost.ejs
@@ -105,6 +105,10 @@
                     <td scope='col' col width='80%'><%= post.date %></td>
                 </tr>
                 <tr>
+                    <th scope='col' col width='20%'>조회수</th>
+                    <td scope='col' col width='80%'><%= post.viewcnt+1 %></td>
+                </tr>
+                <tr>
                     <th colspan="8">Source Code</th>
                 </tr>
             </table>
