게시판 텍스트 정렬
게시판 볼 때 텍스트 가운데 정렬

--- a/template/board_userinfo.ejs
+++ b/template/board_userinfo.ejs
@@ -24,6 +24,9 @@
     .userinfo_posts {
         width: 900px;
     }
+    table {
+        text-align:center;
+    }
     ul {
         justify-content: center;
     }
