--- a/template/board_readPost.ejs
+++ b/template/board_readPost.ejs
@@ -107,6 +107,7 @@
                 <tr>
                     <th scope='col' col width='20%'>조회수</th>
                     <td scope='col' col width='80%'><%= post.viewcnt+1 %></td>
+                    <!-- 조회수가 게시글을 본 후 +1되므로 게시글 안에서는 +1해서 보여주기 -->
                 </tr>
                 <tr>
                     <th colspan="8">Source Code</th>
