--- a/template/board_userinfo.ejs
+++ b/template/board_userinfo.ejs
@@ -53,6 +53,7 @@
                 </tr>
             </form>
 
+            <!-- 업데이트가 가능한 회원정보, input에 변경할 정보 입력 후 회원정보 수정 버튼 클릭 -->
             <form action="/user_update" method="POST">
                 <tr class="userinfo_item">
                     <th style="padding-left: 50px;">Name</th>
