--- a/template/board_writePost.ejs
+++ b/template/board_writePost.ejs
@@ -12,6 +12,7 @@
                     <tr>
                         <td>
                             <input type="text" placeholder="카테고리" size="5" disabled>&emsp;
+                            <!-- required 옵션으로 필수값 체크 -->
                             <label><input id="post_kategorie"name="post_kategorie" type="radio" value="C" required> C </label>&emsp;
                             <label><input id="post_kategorie"name="post_kategorie" type="radio" value="Java"> Java </label>&emsp;
                             <label><input id="post_kategorie"name="post_kategorie" type="radio" value="Python"> Python </label>&emsp;
