--- a/template/nav.ejs
+++ b/template/nav.ejs
@@ -36,6 +36,7 @@
             </ul>
         </div>
     </div>
+    <!-- 현재 로그인한 유저의 id를 로그아웃 버튼 옆에 출력 -->
     <h5 style="margin-right:1%; color: white; text-align:center;">Welcome! <%= id %></h5>
     <form class="navbar_user" action="/logout" method="POST">
         <button class="btn btn-warning" type="submit" style="margin-right: 20px;">Logout</button>
