--- a/views/findPasswordResult.ejs
+++ b/views/findPasswordResult.ejs
@@ -14,6 +14,7 @@
         <div class="wrapper fadeInDown">
             <div id="formContent">
                 <h1>
+                    <!-- 비밀번호가 null이면 찾기 실패, 아니면 찾은 비밀번호 보여주기 -->
                     <% if(!passwordid) {%>
                         Can Not Find Password
                     <%} else {%>
