--- a/views/registerResult.ejs
+++ b/views/registerResult.ejs
@@ -14,6 +14,7 @@
         <div class="wrapper fadeInDown">
             <div id="formContent">
                 <h1>
+                    <!-- 결과가 true면 성공, false면 이미 있는 아이디라서 실패 -->
                     <% if(result == true) {%>
                         Register Clear!
                     <%} else {%>
