--- a/views/findIDResult.ejs
+++ b/views/findIDResult.ejs
@@ -14,6 +14,7 @@
         <div class="wrapper fadeInDown">
             <div id="formContent">
                 <h1>
+                    <!-- 아이디가 null이면 찾기 실패, 아니라면 아이디 보여주기 -->
                     <% if(!Findid) {%>
                         Can Not Find ID
                     <%} else {%>
