--- a/template/board_userinfo.ejs
+++ b/template/board_userinfo.ejs
@@ -1,4 +1,7 @@
 <style>
+    .container {
+        min-height: 100%;
+    }
     .userinfo_home {
         font-family:"Helvetica";
         padding-bottom: 60px;
@@ -26,105 +29,112 @@
     table {
         text-align:center;
     }
+    body {
+        margin:0;
+        padding:0;
+        height: 100%;
+    }
     ul {
         justify-content: center;
     }
 </style>
 <center>
-    <div class="userinfo_home">
-        <div class="userinfo_head">
-            <%= user.name %>'s Info
-        </div>
-        <table>
-            <form action="/edit_password" method="POST">
-                <tr class="userinfo_item">
-                    <th style="width: 200px;padding-left: 50px;">ID</th>
-                    <td style="width: 700px;" align="left"><%= user.user_id %></td>
-                </tr>
-                <tr class="userinfo_item">
-                    <th style="padding-left: 50px;">비밀번호 변경</th>
-                    <td><input type="password" class="form-control" placeholder="Password" style="width: 300px;" id="editPW_first" name="editPW_first"></td>
-                </tr>
-                <tr class="userinfo_item">
-                    <th style="padding-left: 50px;">비밀번호 확인</th>
-                    <td style="text-align: left;"><input type="password" class="form-control" placeholder="Password" style="width: 300px;float: left;" id="editPW_second" name="editPW_second">
-                        <input type="submit" class="btn btn-warning" style="float: left;margin-left: 10px;" value="비밀번호 변경"></td>
-                </tr>
-            </form>
+    <div class="container">
+        <div class="userinfo_home">
+            <div class="userinfo_head">
+                <%= user.name %>'s Info
+            </div>
+            <table>
+                <form action="/edit_password" method="POST">
+                    <tr class="userinfo_item">
+                        <th style="width: 200px;padding-left: 50px;">ID</th>
+                        <td style="width: 700px;" align="left"><%= user.user_id %></td>
+                    </tr>
+                    <tr class="userinfo_item">
+                        <th style="padding-left: 50px;">비밀번호 변경</th>
+                        <td><input type="password" class="form-control" placeholder="Password" style="width: 300px;" id="editPW_first" name="editPW_first"></td>
+                    </tr>
+                    <tr class="userinfo_item">
+                        <th style="padding-left: 50px;">비밀번호 확인</th>
+                        <td style="text-align: left;"><input type="password" class="form-control" placeholder="Password" style="width: 300px;float: left;" id="editPW_second" name="editPW_second">
+                            <input type="submit" class="btn btn-warning" style="float: left;margin-left: 10px;" value="비밀번호 변경"></td>
+                    </tr>
+                </form>
 
-            <!-- 업데이트가 가능한 회원정보, input에 변경할 정보 입력 후 회원정보 수정 버튼 클릭 -->
-            <form action="/user_update" method="POST">
-                <tr class="userinfo_item">
-                    <th style="padding-left: 50px;">Name</th>
-                    <td><input id="name" class="form-control" name="name" style="width: 300px;" type="text" placeholder="<%= user.name %>"></td>
-                </tr>
-                <tr class="userinfo_item">
-                    <th style="padding-left: 50px;">Address</th>
-                    <td><input id="address" class="form-control" name="address" style="width: 300px;" type="text" placeholder="<%= user.address %>"></td>
-                </tr>
-                <tr class="userinfo_item">
-                    <th style="padding-left: 50px;">E-Mail</th>
-                    <td style="text-align: left;"><input id="email" class="form-control" name="email" style="width: 300px; float: left;" type="text" placeholder="<%= user.email %>">
-                        <button class="btn btn-primary" type="submit" style="float: left;margin-left: 10px;">회원정보 수정</button></td>
-                </tr>
-            </form>
-        </table>
-        <div class="userinfo_posts">
-            <div class="row justify-content-center"">
-                    <table class="table" border="1">
-                        <thead>
-                            <colgroup>
-                            <tr class="table-primary">
-                                <th scope="col" col width="10%">카테고리</th>
-                                <th scope="col" col width="15%">제목</th>
-                                <th scope="col" col width="10%">작성자</th>
-                                <th scope="col" col width="15%">게시일</th>
-                                <th scope="col" col width="10%">조회수</th>
-                                <th scope="col" col width="10%">Advice</th>
+                <!-- 업데이트가 가능한 회원정보, input에 변경할 정보 입력 후 회원정보 수정 버튼 클릭 -->
+                <form action="/user_update" method="POST">
+                    <tr class="userinfo_item">
+                        <th style="padding-left: 50px;">Name</th>
+                        <td><input id="name" class="form-control" name="name" style="width: 300px;" type="text" placeholder="<%= user.name %>"></td>
+                    </tr>
+                    <tr class="userinfo_item">
+                        <th style="padding-left: 50px;">Address</th>
+                        <td><input id="address" class="form-control" name="address" style="width: 300px;" type="text" placeholder="<%= user.address %>"></td>
+                    </tr>
+                    <tr class="userinfo_item">
+                        <th style="padding-left: 50px;">E-Mail</th>
+                        <td style="text-align: left;"><input id="email" class="form-control" name="email" style="width: 300px; float: left;" type="text" placeholder="<%= user.email %>">
+                            <button class="btn btn-primary" type="submit" style="float: left;margin-left: 10px;">회원정보 수정</button></td>
+                    </tr>
+                </form>
+            </table>
+            <div class="userinfo_posts">
+                <div class="row justify-content-center"">
+                        <table class="table" border="1">
+                            <thead>
+                                <colgroup>
+                                <tr class="table-primary">
+                                    <th scope="col" col width="10%">카테고리</th>
+                                    <th scope="col" col width="15%">제목</th>
+                                    <th scope="col" col width="10%">작성자</th>
+                                    <th scope="col" col width="15%">게시일</th>
+                                    <th scope="col" col width="10%">조회수</th>
+                                    <th scope="col" col width="10%">Advice</th>
+                                </tr>
+                                </colgroup>
+                            </thead>
+                            <tbody>
+                            <%
+                                page_num = posts.length
+                                if(page_num > 5)
+                                    view_post = 5
+                                else
+                                    view_post = page_num
+                            %>
+                            <% for( let i = 0; i < view_post; i++){%>
+                            <tr>
+                                <th><%= posts[i].post_kategorie%></th>
+                                <th scope="row"><a href="/read/<%=posts[i].post_no%>"><%= posts[i].post_title %></a></th>
+                                <th><%= posts[i].user_id%></th>
+                                <th><%= posts[i].date%></th>
+                                <th><%= posts[i].viewcnt%></th>
+                                <th><%= posts[i].code_advice.length %></th>
                             </tr>
-                            </colgroup>
-                        </thead>
-                        <tbody>
+                            <%}%>
+                            </tbody>
+                        </table>
                         <%
-                            page_num = posts.length
-                            if(page_num > 5)
-                                view_post = 5
-                            else
-                                view_post = page_num
+                            if (limit_page > 10)
+                                limit_page = 10
                         %>
-                        <% for( let i = 0; i < view_post; i++){%>
-                        <tr>
-                            <th><%= posts[i].post_kategorie%></th>
-                            <th scope="row"><a href="/read/<%=posts[i].post_no%>"><%= posts[i].post_title %></a></th>
-                            <th><%= posts[i].user_id%></th>
-                            <th><%= posts[i].date%></th>
-                            <th><%= posts[i].viewcnt%></th>
-                            <th><%= posts[i].code_advice.length %></th>
-                        </tr>
-                        <%}%>
-                        </tbody>
-                    </table>
-                    <%
-                        if (limit_page > 10)
-                            limit_page = 10
-                    %>
-                    <nav aria-label="Page navigation example">
-                        <ul class="pagination">
-                          <li class="page-item">
-                            <a class="page-link" href="/page/<%= 1 %>" aria-label="Previous">
-                              <span aria-hidden="true">&laquo;</span>
-                            </a>
-                          </li>
-                          <% for(var j = 0; j < limit_page; j++){ %>
-                          <li class="page-item"><a class="page-link" href="/page/<%= j + 1 %>"><%= j + 1 %></a></li>
-                          <% } %>
-                          <li class="page-item">
-                            <a class="page-link" href="/page/<%= j %>" aria-label="Next">
-                              <span aria-hidden="true">&raquo;</span>
-                            </a>
-                          </li>
-                        </ul>
-                    </nav>
+                        <nav aria-label="Page navigation example">
+                            <ul class="pagination">
+                            <li class="page-item">
+                                <a class="page-link" href="/page/<%= 1 %>" aria-label="Previous">
+                                <span aria-hidden="true">&laquo;</span>
+                                </a>
+                            </li>
+                            <% for(var j = 0; j < limit_page; j++){ %>
+                            <li class="page-item"><a class="page-link" href="/page/<%= j + 1 %>"><%= j + 1 %></a></li>
+                            <% } %>
+                            <li class="page-item">
+                                <a class="page-link" href="/page/<%= j %>" aria-label="Next">
+                                <span aria-hidden="true">&raquo;</span>
+                                </a>
+                            </li>
+                            </ul>
+                        </nav>
+                </div>
             </div>
         </div>
     </div>
