userinfo 회원정보 수정 기능 개선 및 비밀번호 찾기 기능 업그레이드
- userinfo에서 기존의 회원정보를 value로 미리 input칸에 입력되어 있게 수정
- 비밀번호 찾기 시 가입한 유저가 맞으면 새로운 비밀번호를 입력하도록 업그레이드

--- a/template/board_userinfo.ejs
+++ b/template/board_userinfo.ejs
@@ -76,15 +76,15 @@
                 <form action="/user_update" method="POST">
                     <tr class="userinfo_item">
                         <th style="padding-left: 50px;">Name</th>
-                        <td><input id="name" class="form-control" name="name" style="width: 300px;" type="text" placeholder="<%= user.name %>"></td>
+                        <td><input id="name" class="form-control" name="name" style="width: 300px;" type="text" value="<%= user.name %>"></td>
                     </tr>
                     <tr class="userinfo_item">
                         <th style="padding-left: 50px;">Address</th>
-                        <td><input id="address" class="form-control" name="address" style="width: 300px;" type="text" placeholder="<%= user.address %>"></td>
+                        <td><input id="address" class="form-control" name="address" style="width: 300px;" type="text" value="<%= user.address %>"></td>
                     </tr>
                     <tr class="userinfo_item">
                         <th style="padding-left: 50px;">E-Mail</th>
-                        <td style="text-align: left;"><input id="email" class="form-control" name="email" style="width: 300px; float: left;" type="text" placeholder="<%= user.email %>">
+                        <td style="text-align: left;"><input id="email" class="form-control" name="email" style="width: 300px; float: left;" type="text" value="<%= user.email %>">
                             <button class="btn btn-primary" type="submit" style="float: left;margin-left: 10px;">회원정보 수정</button></td>
                     </tr>
                 </form>
