--- a/views/findPasswordResult.ejs
+++ b/views/findPasswordResult.ejs
@@ -13,15 +13,22 @@
     <center>
         <div class="wrapper fadeInDown">
             <div id="formContent">
-                <h1>
-                    <!-- 비밀번호가 null이면 찾기 실패, 아니면 찾은 비밀번호 보여주기 -->
-                    <% if(!passwordid) {%>
-                        Can Not Find Password
-                    <%} else {%>
-                        Your Password <%= passwordid %>
-                    <%}%>
-                </h1>
-
+                <!-- result가 null이면 못찾았다고 메시지, result에 id가 있으면 새로운 비밀번호 입력 -->
+                <% if(!result) {%>
+                    <h1>Can Not Find User!</h1>
+                <%} else {
+                    id = result
+                %>
+                <form action="/newPassword" method="POST">
+                    <h1>
+                        New Password
+                        <br>
+                        <input id="password1" name="password1" type="password" style="width:400px" placeholder="Password">
+                        <input id="password2" name="password2" type="password" style="width:400px" placeholder="Password">
+                        <button class="btn btn-outline-secondary" style="margin:2%" type="submit">비밀번호 변경</button>
+                    </h1>
+                </form>
+                <%}%>
                 <form action="/BackHome" method="POST">
                     <button class="btn btn-outline-secondary" type="submit">홈 화면으로</button>
                 </form>
