로고 오타 수정
Soruce Advice -> Source Advice

--- a/template/nav.ejs
+++ b/template/nav.ejs
@@ -13,7 +13,7 @@
     <div class="container-fluid">
         <div class="navbar_logo">
             <i class="fab fa-accusoft"></i>
-            <a class="navbar-brand" href="/BackHome">Soruce Advice</a>
+            <a class="navbar-brand" href="/BackHome">Source Advice</a>
         </div>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
