--- a/template/board_userinfo.ejs
+++ b/template/board_userinfo.ejs
@@ -1,6 +1,7 @@
 <style>
     .container {
         min-height: 100%;
+        margin-top: 2%;
     }
     .userinfo_home {
         font-family:"Helvetica";
@@ -26,9 +27,6 @@
     .userinfo_posts {
         width: 900px;
     }
-    table {
-        text-align:center;
-    }
     body {
         margin:0;
         padding:0;
@@ -36,6 +34,9 @@
     }
     ul {
         justify-content: center;
+    }
+    a {
+        text-decoration: none !important;
     }
 </style>
 
