--- a/template/board_userinfo.ejs
+++ b/template/board_userinfo.ejs
@@ -43,6 +43,10 @@
     <script type="text/javascript">
         alert("비밀번호 변경 완료")
     </script>
+<% } else if(password_update == 2) { %>
+    <script type="text/javascript">
+        alert("각 비밀번호가 다릅니다. 다시 시도해주세요.")
+    </script>
 <% } %>
 <% if(userinfo_update == 1) { %>
     <script type="text/javascript">
