--- a/template/board_java.ejs
+++ b/template/board_java.ejs
@@ -70,7 +70,7 @@
                     </li>
                     <% } %>
                     <li class="page-item">
-                        <a class="page-link" href="/page/<%= j %>" aria-label="Next">
+                        <a class="page-link" href="/page/99" aria-label="Next">
                             <span aria-hidden="true">&raquo;</span>
                         </a>
                     </li>
