--- a/template/board_list.ejs
+++ b/template/board_list.ejs
@@ -66,7 +66,7 @@
                     </li>
                     <% } %>
                     <li class="page-item">
-                        <a class="page-link" href="/page/<%= j %>" aria-label="Next">
+                        <a class="page-link" href="/page/999" aria-label="Next">
                             <span aria-hidden="true">&raquo;</span>
                         </a>
                     </li>
