--- a/template/board_c.ejs
+++ b/template/board_c.ejs
@@ -13,6 +13,9 @@
         justify-content: center;
     }
 </style>
+
+
+<!-- C언어 카테고리 -->
 <center>
     <div class="row justify-content-center"">
         <div class="col-sm-8">
@@ -30,6 +33,7 @@
                     </colgroup>
                 </thead>
                 <tbody>
+                <!-- 보여질 게시글의 개수. 최대 10개 -->
                 <%
                     page_num = posts.length
                     if(page_num > 10)
@@ -38,7 +42,7 @@
                         view_post = page_num
                 %>
                 <% for( let i = 0; i < view_post; i++){%>
-                    <!-- 카테고리가 C인 게시글만 보여주기 -->
+                    <!-- 카테고리가 C인 게시글만 보여주기 위한 조건 -->
                     <% if(posts[i].post_kategorie == "C") {%>
                         <tr>
                             <th><%= posts[i].post_kategorie%>
@@ -52,6 +56,7 @@
                 <%}%>
                 </tbody>
             </table>
+            <!-- 페이지 제한 -->
             <%
                 if (limit_page > 10)
                     limit_page = 10
@@ -59,6 +64,7 @@
             <nav aria-label="Page navigation example">
                 <ul class="pagination">
                     <li class="page-item">
+                        <!-- 첫 페이지로 이동 -->
                         <a class="page-link" href="/page/<%= 1 %>" aria-label="Previous">
                             <span aria-hidden="true">&laquo;</span>
                         </a>
@@ -69,6 +75,7 @@
                     </li>
                     <% } %>
                     <li class="page-item">
+                        <!-- 마지막 페이지로 이동 -->
                         <a class="page-link" href="/page/999" aria-label="Next">
                             <span aria-hidden="true">&raquo;</span>
                         </a>
