--- a/views/findID.ejs
+++ b/views/findID.ejs
@@ -18,12 +18,16 @@
                 <h1>FindID Page</h1>
                 <table>
                     <form action="/findIDRst" method="POST">
+                        <!-- 이름 -->
                         <input id="name" name="name" type="text" placeholder="name">
                         <br />
+                        <!-- E-Mail -->
                         <input id="email" name="email" type="text" placeholder="email">
                         <br />
+                        <!-- 주소 -->
                         <input id="address" name="address" type="text" placeholder="address">
                         <br />
+                        <!-- Submit -->
                         <button class="btn btn-outline-secondary" type="submit ">아이디 찾기</button>
                     </form>
                     <form action="/BackHome" method="POST">
