--- a/views/findPassword.ejs
+++ b/views/findPassword.ejs
@@ -18,15 +18,20 @@
                 <h1>FindPassword Page</h1>
                 <table>
                     <form action="/findPasswordRst" method="POST">
+                        <!-- ID -->
                         <input id="user_id" name="user_id" type="text" placeholder="ID">
                         <br />
+                        <!-- 이름 -->
                         <input id="name" name="name" type="text" placeholder="name">
                         <br />
+                        <!-- E-Mail -->
                         <input id="email" name="email" type="text" placeholder="email">
                         <br />
+                        <!-- 주소 -->
                         <input id="address" name="address" type="text" placeholder="address">
                         <br />
                         <br />
+                        <!-- Submit -->
                         <button class="btn btn-outline-secondary" type="submit ">비밀번호 찾기</button>
                     </form>
                     <form action="/BackHome" method="POST">
