--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,8 +17,10 @@
             <div id="formContent">
                 <h1>Source Advice</h1>
                 <form action="/" method="POST">
+                    <!-- ID -->
                     <input id="user_id" name="user_id" type="text" placeholder="ID">
                     <br />
+                    <!-- 비밀번호 -->
                     <input id="password" name="password" type="password" placeholder="Password">
                     <br />
                     <button class="btn btn-outline-primary" style="margin-top:2%" type="submit">로그인</button>
