--- a/views/main.ejs
+++ b/views/main.ejs
@@ -20,7 +20,7 @@
 <!-- ---------------------------Head--------------------------------- -->
 
 <!-- 0번은 게시판, 1번은 게시물 작성, 2번은 게시물 보기 -->
-<!-- 3번은 C, 4번은 Java, 5번은 Python -->
+<!-- 3번은 C, 4번은 Java, 5번은 Python, 6번은 MyPage -->
 <!-- ---------------------------Body--------------------------------- -->
 <body>
 
