--- a/views/register.ejs
+++ b/views/register.ejs
@@ -18,17 +18,23 @@
                 <h1>Register Page</h1>
                 <table>
                     <form action="/register" method="POST">
+                        <!-- ID -->
                         <input id="user_id" name="user_id" type="text" placeholder="ID">
                         <br />
+                        <!-- 비밀번호 -->
                         <input id="password" name="password" type="password" placeholder="Password">
                         <br />
+                        <!-- 이름 -->
                         <input id="name" name="name" type="text" placeholder="Name">
                         <br />
+                        <!-- E-Mail -->
                         <input id="email" name="email" type="text" placeholder="E-mail">
                         <br />
+                        <!-- 주소 -->
                         <input id="address" name="address" type="text" placeholder="Address">
                         <br />
                         <br />
+                        <!-- Submit -->
                         <button class="btn btn-outline-secondary" type="submit ">회원가입</button>
                     </form>
                     
